--- a/sdk/java/pom.xml
+++ b/sdk/java/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.bhex.api</groupId>
-    <artifactId>hbex-api-client</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>bhex-api-client</artifactId>
+    <version>1.1</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
