--- a/sdk/java/pom.xml
+++ b/sdk/java/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.bhex.api</groupId>
     <artifactId>bhex-api-client</artifactId>
-    <version>1.1</version>
+    <version>1.2</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -66,6 +66,14 @@
             <artifactId>converter-jackson</artifactId>
             <version>2.4.0</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+
     </dependencies>
 
     <build>
